# pyspark-excel-datasource

./: LICENSE  README.md  pyproject.toml
src/pyspark_datasource/: __init__.py
src/pyspark_datasource/excel/: __init__.py  connector.py
tests/: test_excel_connector.py
