[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyspark-excel-datasource"
version = "0.1.0"
description = "PySpark Data Source Connectors for Excel."
readme = "README.md"
requires-python = "==3.12.*"
license = { file = "LICENSE" }
authors = [
    { name = "Ashish Saraswat", email = "40425481+AshiSaraswat@users.noreply.github.com" },
]

dependencies = [
    "pyspark>=4.0.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "pyarrow>=15.0.0",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[dependency-groups]
dev = ["pytest>=7.0.0", "ruff>=0.3.0", "mypy>=1.0.0"]

[project.scripts]
# test = "pytest {args:tests}"
# lint = "ruff check {args:.}"
# format = "ruff format {args:.}"
# typecheck = "mypy {args:src}"
# clean = "uv pip uninstall -y -r <(uv pip freeze)"

[project.urls]
Documentation = "https://github.com/AshiSaraswat/pyspark-excel-datasource#readme"
Repository = "https://github.com/AshiSaraswat/pyspark-excel-datasource.git"
